# OSPRay

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt  static_plugins_instance.h
apps/common/commandline/: CMakeLists.txt
apps/common/loaders/: CMakeLists.txt  ObjectFile.cpp  ObjectFile.h  TriangleMeshFile.cpp  TriangleMeshFile.h  VolumeFile.cpp  VolumeFile.h
apps/common/ospapp/: OSPApp.cpp
apps/common/sg/: CMakeLists.txt  Renderer.h  SceneGraph.h
apps/common/sg/camera/: PanoramicCamera.cpp
apps/common/sg/geometry/: Geometry.cpp
apps/common/sg/importer/: ImportOBJ.cpp  ImportOSP.cpp  ImportPLY.cpp  ImportRIVL.cpp  importOSP.cpp  importPLY.cpp  importRIVL.cpp
apps/common/sg/module/: Module.cpp
apps/common/widgets/: CMakeLists.txt
apps/common/xml/: CMakeLists.txt
apps/exampleViewer/: CMakeLists.txt
apps/exampleViewer/common/: CMakeLists.txt
apps/exampleViewer/common/imgui/: CMakeLists.txt
apps/modelViewer/: CMakeLists.txt
apps/qtViewer/: CMakeLists.txt  main.cpp
apps/qtViewer/sg/: CMakeLists.txt
apps/qtViewer/sg/geometry/: TriangleMesh.cpp
apps/qtViewer/sg/importer/: ImportOBJ.cpp  (+4 more)
apps/utility/: CMakeLists.txt
apps/volumeViewer/: CMakeLists.txt  IsosurfaceEditor.h  IsovalueWidget.h  LightEditor.h  LinearTransferFunctionWidget.cpp  LinearTransferFunctionWidget.h  QOSPRayWindow.h  SliceEditor.h  SliceWidget.h  VolumeViewer.cpp
cmake/: FindTBB.cmake  build_embree_2.7.1.cmake  build_embree_2.8.0.cmake  ispc.cmake  ospray.cmake  ospray_macros.cmake
cmake/ospray_cmake_config/: osprayConfig.cmake.in
components/mpiMessageLayer/: CMakeLists.txt
components/ospcommon/: common.cpp  intrinsics.h  library.cpp  library.h
components/ospcommon/cmake/: FindGLFW.cmake  FindTBB.cmake  ispc.cmake  macros.cmake
modules/loaders/: CMakeLists.txt  ObjectFile.cpp  ObjectFile.h  TriangleMeshFile.cpp  TriangleMeshFile.h  VolumeFile.cpp  VolumeFile.h
modules/opengl/: CMakeLists.txt
modules/seismic/: CMakeLists.txt
modules/tachyon/: CMakeLists.txt
ospcommon/: library.h
ospray/: CMakeLists.txt  static_plugins_instance.cpp  static_plugins_instance.h
ospray/api/: API.cpp  Device.cpp  ISPCDevice.cpp  LocalDevice.cpp
ospray/camera/: Camera.cpp  Camera.h
ospray/common/: Managed.h  Material.cpp  Material.h  Model.h  OSPCommon.cpp  OSPCommon.h  Util.h
ospray/embree-v2.7.1/: CMakeLists.txt
ospray/fb/: PixelOp.cpp  PixelOp.h
ospray/geometry/: Geometry.cpp  Geometry.h  QuadMesh.cpp  TriangleMesh.cpp
ospray/lights/: Light.cpp  Light.h
ospray/render/: Renderer.cpp  Renderer.h
ospray/render/scivis/: SciVisMaterial.cpp
ospray/render/simpleAO/: SimpleAO.cpp
ospray/transferFunction/: TransferFunction.cpp  TransferFunction.h
ospray/volume/: Volume.cpp  Volume.h
ospray/volume/amr/: KDTree.ih
scripts/release/: win.sh
(+8 files in other folders)
